[CS-4662]: Adjust layout issues

--- a/packages/safe-tools-client/app/components/deposit-modal/index.css
+++ b/packages/safe-tools-client/app/components/deposit-modal/index.css
@@ -31,7 +31,7 @@
 }
 
 .deposit-modal__section p.deposit-modal__section-funds-info-balance {
-  margin: 0;
+  margin: var(--boxel-sp-xxs) 0;
 }
 
 .deposit-modal__section-funds-info-icon {
